@@ -1,5 +1,8 @@
 2005-10-06  noel  <vnoel@cox.net>
 
+	* logview.c (CreateMainWin): Use the desktop monospace font by
+	default.
+
 	* log_repaint.c (logview_draw_log_lines): Prevent cast
 	warning. Part of bug #318095. Patch by Stanislav Brabec.
 	* about.c: Fix missing include. Part of bug #318095. Patch
